# snort_rag_rule_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/knowledge_base/: fetch_summary.json
data/logs/: sample_network_logs.csv
data/processed/: dataset_summary.json  final_snort_dataset.csv  final_snort_dataset.jsonl  person1_rules.rules  snort_generated_dataset.csv  snort_generated_dataset.json  snort_generated_dataset.jsonl
data/raw/: manual_seed_notes.md  trusted_sources_manifest.csv
docs/: dataset_methodology.md  dataset_validation_report.md  generation_module_final_status.md  pcap_testing_plan.md  rapport_snort_rag_devoir3.docx  report_section_dataset_kb.md  report_section_generation_validation.md  report_section_retrieval_benchmark.md  rule_validation_notes.md
notebooks/: devoir3_snort_rag_architectures.ipynb
results/: comparison_metrics.csv  detailed_devoir3_results.csv  embedding_benchmark.csv  false_positive_analysis.csv  generated_rule_examples.csv  retrieval_backend_proof.json  retrieval_benchmark_k3_summary.csv  retrieval_topk_examples.csv
scripts/: benchmark_retrieval.py  fetch_real_sources.py  generate_generation_examples.py  plot_retrieval_benchmark.py  validate_dataset.py  validate_rules_with_snort.sh
src/snort_rag/: __init__.py  app_gradio.py  architectures.py  evaluation.py  false_positive.py  generate_dataset.py  generator.py  knowledge_base.py  retrieval.py  rule_parser.py  run_devoir3.py  source_manifest.py  templates.py
tests/: test_generate_dataset.py  test_generator.py  test_retrieval.py  test_rule_parser.py
(+1 files in other folders)
