[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "snort-rag-rule-generator"
version = "1.0.0"
description = "Defensive NLP/RAG Snort rule generator for Devoir 3"
requires-python = ">=3.10"
dependencies = ["pandas", "numpy", "scikit-learn", "matplotlib", "gradio", "pypdf"]

[tool.setuptools.packages.find]
where = ["src"]
